--- a/stad_gent/index.html
+++ b/stad_gent/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <div id="parking-data"></div>
     <script type="module" src="script.js"></script>
 </body>
 </html>
